--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ html, body {
 .heading.quote h3 {
   color: var(--grey-label);          /* Grey label for the h3 text */
   text-align: center;                /* Center-align the h3 text */
-  font-weight: 350;                  
+  font-weight: 365;   
+  font-style: italic;
 }
 
 
