--- a/style.css
+++ b/style.css
@@ -295,7 +295,8 @@ html, body {
 }
 
 .blogcard:hover img {
-  opacity: 0.60;
+  transform: scale(1.05);  
+  opacity: 1.10;
 }
 
 
@@ -364,7 +365,8 @@ html, body {
 }
 
 .projectcard:hover img {
-  opacity: 0.60;
+  transform: scale(1.05);  
+  opacity: 1.10;
 }
 
 /* ============================================================
