--- a/style.css
+++ b/style.css
@@ -457,8 +457,8 @@ html, body {
 
 /* icon circle size */
 .social-icons a {
-  width: 42px;  
-  height: 42px; 
+  width: 38px;  
+  height: 38px; 
   background: #2b2b2b;
   border-radius: 50%;
   display: flex;
@@ -474,8 +474,8 @@ html, body {
 
 /* increased icon size inside */
 .social-icons img {
-  width: 36px;   /* reduced icon size */
-  height: 36px;  /* reduced icon size */
+  width: 32px;   /* reduced icon size */
+  height: 32px;  /* reduced icon size */
   filter: brightness(0) invert(1);
   transition: 0.25s;
 }
@@ -490,7 +490,7 @@ html, body {
 ============================================================ */
 .site-footer {
   margin-top: 0;
-  padding: 0;
+  padding: 5px;
   text-align: center;
   color: #8d8d8d;
 }
