--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ html, body {
 }
 
 .info-header {
-  display: center;
+  display: flex;
   align-items: center;      /* Center icon and text vertically */
   gap: 15px;                /* Keep the gap between icon and text comfortable */
 }
@@ -415,10 +415,11 @@ html, body {
   background: var(--mustard);
   border-radius: 50%;
   
-  display: center;             /* changed from flex center the inner icon */
+  display: flex;             /* changed from flex center the inner icon */
   align-items: center;
   justify-content: center;
 
+  
   padding: 0;                /* remove padding so the SVG stays correct size */
   transition: background 0.3s ease;
 }
