--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@ html, body {
   align-items: center;
   justify-content: center;
 
-  
+  margin: 0; 
   padding: 0;                /* remove padding so the SVG stays correct size */
   transition: background 0.3s ease;
 }
@@ -493,7 +493,7 @@ html, body {
 /* Footer sits cleanly at the bottom with no extra spacing */
 
 .site-footer {
-  margin-top: -10px;
+  margin-top: 0;
   padding: 5px;
   text-align: center;
   color: #8d8d8d;
@@ -530,8 +530,8 @@ html, body {
 
 @media (max-width: 768px) {
   .contact-icon {
-    width: 20px;   /* Make icons smaller */
-    height: 20px;  /* Make icons smaller */
+    width: 18px;   /* Make icons smaller */
+    height: 18px;  /* Make icons smaller */
   }
 
   .info-header {
