--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ html, body {
   height: 165px;
   object-fit: cover;
   border-radius: 8px;
-  transition: opacity 0.35s ease;
+  transition: opacity 0.35s ease,
   color 0.25s ease;
 }
 
@@ -374,7 +374,7 @@ html, body {
   height: 165px;
   object-fit: cover;
   border-radius: 8px;
-  transition: opacity 0.35s ease;
+  transition: opacity 0.35s ease,
   color 0.25s ease;
 }
 
