--- a/style.css
+++ b/style.css
@@ -275,8 +275,8 @@ html, body {
    9. ABOUT ME
 ============================================================ */
 .about h2 { font-size: 36px; color: var(--text-lightgrey) !important; }
-.about h3 { font-size: 20px; color: var(--grey-label) !important; }
-.about p { font-size: 15px; color: var(--text-lightgrey) !important; }
+.about h3 { font-size: 20px; color: var(--grey-label) !important; line-height: 1.3;}
+.about p { font-size: 15px; color: var(--text-lightgrey) !important; line-height: 1.4;}
 
 /* ============================================================
    10. BLOGS AND ARTICLES
