--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ html, body {
 ============================================================ */
 .about h2 { font-size: 36px; color: var(--text-lightgrey) !important; }
 .about h3 { font-size: 20px; color: var(--grey-label) !important; line-height: 1.4;}
-.about p { font-size: 16px; color: var(--text-lightgrey) !important; line-height: 1.6;}
+.about p { font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify; line-height: 1.6;}
 
 /* ============================================================
    10. BLOGS AND ARTICLES
@@ -333,7 +333,7 @@ html, body {
   box-shadow: 0 8px 24px rgba(0,0,0,0.5);
 }
 
-.writingcard h3 { font-size: 20px; color: var(--grey-label) !important; line-height: 1.4;}
+.writingcard h3 { font-size: 20px; color: var(--grey-label) !important; line-height: 1.1;}
 
 .writingcard h3 a {
   color: inherit;
@@ -347,7 +347,7 @@ html, body {
   color: var(--text-lightgrey);              
 }
 
-.writingcard p {  font-size: 16px;  color: var(--text-lightgrey) !important; line-height: 1.5;}
+.writingcard p {  font-size: 16px;  color: var(--text-lightgrey) !important; line-height: 1.3;}
 
 /* ============================================================
    12. DATA SCIENCE PROJECTS
@@ -423,8 +423,8 @@ html, body {
 }
 
 .contact-icon {
-  width: 38px;               /* smaller circle */
-  height: 38px;
+  width: 40px;               /* smaller circle */
+  height: 40px;
   background: var(--mustard);
   border-radius: 50%;
   
@@ -438,8 +438,8 @@ html, body {
 }
 
 .contact-icon img {
-  width: 14px;
-  height: 14px;
+  width: 16px;
+  height: 16px;
   display: block;
   margin: auto;
 }
