--- a/style.css
+++ b/style.css
@@ -278,11 +278,6 @@ html, body {
 .about h3 { font-size: 20px; color: var(--grey-label) !important; line-height: 1.4;}
 .about p { font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;}
 
-.about p a,
-.about p a:visited,
-.about p a:hover,
-.about p a:active {color: var(--grey-label) !important;}
-
 /* ============================================================
    10. BLOGS AND ARTICLES
 ============================================================ */
@@ -559,3 +554,10 @@ html, body {
   }
 }
 
+/* ============================================================
+   FORCE LINK COLOR INSIDE ABOUT SECTION
+============================================================ */
+.about p a,
+.about p a:visited,
+.about p a:hover,
+.about p a:active {color: var(--grey-label) !important;}
