--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ html, body {
 .about p { font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;}
 
 /* ============================================================
-   BLOGS AND ARTICLES – Blog Cards
+   BLOGS AND ARTICLES
 ============================================================ */
 
 .blogcards {
@@ -347,6 +347,7 @@ html, body {
   color: #ddd;
   font-size: 0.85rem;
   font-weight: 400;
+  font-style: italic;
   line-height: 1.3;
   margin: 0;
   opacity: 0;
@@ -471,11 +472,12 @@ html, body {
   transition: opacity 0.4s ease, transform 0.4s ease;
 }
 
-/* Subtitle / tech stack */
+/* Subtitle/tech stack */
 .project-overlay h4 {
   color: #ddd;
   font-size: 0.85rem;
   font-weight: 400;
+  font-style: italic;
   line-height: 1.3;
   margin: 0;
   opacity: 0;
